--- a/Heroes3MapReader.UI/Views/MainWindow.axaml
+++ b/Heroes3MapReader.UI/Views/MainWindow.axaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:converters="clr-namespace:Heroes3MapReader.UI.Converters"
+        xmlns:views="clr-namespace:Heroes3MapReader.UI.Views"
         mc:Ignorable="d" d:DesignWidth="1200" d:DesignHeight="700"
         x:Class="Heroes3MapReader.UI.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
@@ -149,7 +150,7 @@
                     </StackPanel>
 
                     <!-- Faction Filter -->
-                    <Expander IsExpanded="True"
+                    <Expander IsExpanded="False"
                               Background="Transparent"
                               Margin="0,-10,0,-10"
                               HorizontalAlignment="Stretch"
@@ -327,8 +328,6 @@
                                            IsVisible="{Binding MinimapImage, Converter={x:Static ObjectConverters.IsNull}}"/>
                             </StackPanel>
 
-                            <Separator/>
-
                             <!-- Map Stats -->
                             <StackPanel Spacing="5">
                                 <TextBlock Text="Map Details" FontWeight="SemiBold"/>
@@ -364,6 +363,12 @@
                                                TextWrapping="Wrap" Margin="0,0,0,5" />
                                 </Grid>
                             </StackPanel>
+
+                            <!-- Playable Factions -->
+                            <views:PlayableFactionsControl Factions="{Binding PlayableFactions}" />
+
+                            <!-- Banned Spells -->
+                            <views:BannedSpellsControl Spells="{Binding BannedSpells}" />
                         </StackPanel>
                     </StackPanel>
                 </ScrollViewer>
