--- a/Heroes3MapReader.UI/App.axaml
+++ b/Heroes3MapReader.UI/App.axaml
@@ -5,5 +5,6 @@
     <Application.Styles>
         <FluentTheme />
         <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml"/>
+        <StyleInclude Source="avares://Heroes3MapReader.UI/Styles/SharedStyles.axaml"/>
     </Application.Styles>
 </Application>
