--- a/Heroes3MapReader.UI/Views/BannedSpellsControl.axaml
+++ b/Heroes3MapReader.UI/Views/BannedSpellsControl.axaml
@@ -10,6 +10,7 @@
              x:DataType="enums:SpellType">
 
     <Expander IsExpanded="False"
+              Classes="compact"
               Background="Transparent"
               Margin="0,-10,0,0"
               HorizontalAlignment="Stretch"
@@ -21,20 +22,7 @@
                            Foreground="{DynamicResource SystemAccentColor}"/>
             </StackPanel>
         </Expander.Header>
-        <Expander.Styles>
-            <Style Selector="Expander /template/ ToggleButton#ExpanderHeader">
-                <Setter Property="BorderThickness" Value="0"/>
-                <Setter Property="Background" Value="Transparent"/>
-                <Setter Property="Padding" Value="0"/>
-                <Setter Property="MinHeight" Value="0"/>
-                <Setter Property="Cursor" Value="Hand"/>
-            </Style>
-            <Style Selector="Expander:down /template/ Border#ExpanderContent">
-                <Setter Property="BorderThickness" Value="0"/>
-                <Setter Property="Padding" Value="5,5,0,0"/>
-            </Style>
-        </Expander.Styles>
-        <ScrollViewer MaxHeight="200" Margin="0,0,20,0">
+        <ScrollViewer MaxHeight="200" Margin="5,5,20,0">
             <ItemsControl ItemsSource="{Binding #SpellsExpander.((views:BannedSpellsControl)Parent).Spells}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
