--- a/Heroes3MapReader.UI/Views/PlayableFactionsControl.axaml
+++ b/Heroes3MapReader.UI/Views/PlayableFactionsControl.axaml
@@ -12,7 +12,7 @@
     <Expander IsExpanded="False"
               Classes="compact"
               Background="Transparent"
-              Margin="0,-10,0,0"
+              Margin="0,0,0,0"
               HorizontalAlignment="Stretch"
               Name="FactionsExpander">
         <Expander.Header>
